Refactor carousel slider animation

--- a/index.html
+++ b/index.html
@@ -136,184 +136,9 @@
 
     </header>
 
-    <main>
-        <section class="carousel">
-
-            <!-- list -->
-            <div class="list">
-
-                <!-- list item -->
-                <div class="item">
-                    <img src="assets/images/Video-Images/KOC-1.png" alt="" />
-                    <div class="content">
-                        <div class="content-container">
-                            <div class="title">KING OF CUTS</div>
-                            <div class="sub-title">
-                                NORTH YORKSHIRE'S CHOICE <br> TOP-RATED BARBERSHOP!</div>
-                            <br>
-                            <a href="">
-                                <div class="topic">SELBY SHOP <i class="fa-solid fa-location-dot"></i></div>
-                            </a>
-                            <div class="des">
-                                In Selby's core, right off the main street, King of Cuts takes pride in its supremacy.
-                                Our
-                                shop is conveniently placed just a 5-minute stroll from Selby Abbey.
-                            </div>
-                            <br>
-                            <div class="carousel-cta-btn">
-                                <button class="btn">Book Now</button>
-                                <button class="btn-2">Watch Video</button>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- list item -->
-                <div class="item">
-                    <img src="assets/images/Video-Images/KOC-2.png" alt="" />
-                    <div class="content">
-                        <div class="content-container">
-                            <div class="title">KING OF CUTS</div>
-                            <div class="sub-title">
-                                NORTH YORKSHIRE'S CHOICE <br> TOP-RATED BARBERSHOP!</div>
-                            <br>
-                            <a href="">
-                                <div class="topic">SELBY SHOP <i class="fa-solid fa-location-dot"></i></div>
-                            </a>
-                            <div class="des">
-                                In Selby's core, right off the main street, King of Cuts takes pride in its supremacy.
-                                Our
-                                shop is conveniently placed just a 5-minute stroll from Selby Abbey.
-                            </div>
-                            <br>
-                            <div class="carousel-cta-btn">
-                                <button class="btn">Book Now</button>
-                                <button class="btn-2">Watch Video</button>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- list item -->
-                <div class="item">
-                    <img src="assets/images/Video-Images/KOC-3.bmp" alt="" />
-                    <div class="content">
-                        <div class="content-container">
-                            <div class="title">KING OF CUTS</div>
-                            <div class="sub-title">
-                                NORTH YORKSHIRE'S CHOICE <br> TOP-RATED BARBERSHOP!</div>
-                            <br>
-                            <a href="">
-                                <div class="topic">SELBY SHOP <i class="fa-solid fa-location-dot"></i></div>
-                            </a>
-                            <div class="des">
-                                In Selby's core, right off the main street, King of Cuts takes pride in its supremacy.
-                                Our
-                                shop is conveniently placed just a 5-minute stroll from Selby Abbey.
-                            </div>
-                            <br>
-                            <div class="carousel-cta-btn">
-                                <button class="btn">Book Now</button>
-                                <button class="btn-2">Watch Video</button>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <!-- list item -->
-                <div class="item">
-                    <img src="assets/images/Video-Images/KOC-4.bmp" alt="" />
-                    <div class="content">
-                        <div class="content-container">
-                            <div class="title">KING OF CUTS</div>
-                            <div class="sub-title">
-                                NORTH YORKSHIRE'S CHOICE <br> TOP-RATED BARBERSHOP!</div>
-                            <br>
-                            <a href="">
-                                <div class="topic">SELBY SHOP <i class="fa-solid fa-location-dot"></i></div>
-                            </a>
-                            <div class="des">
-                                In Selby's core, right off the main street, King of Cuts takes pride in its supremacy.
-                                Our
-                                shop is conveniently placed just a 5-minute stroll from Selby Abbey.
-                            </div>
-                            <br>
-                            <div class="carousel-cta-btn">
-                                <button class="btn">Book Now</button>
-                                <button class="btn-2">Watch Video</button>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-
-
-            </div>
-
-            <!-- thumbnail -->
-            <div class="thumbnail-container">
-                <div class="thumbnail">
-                    <div class="item">
-                        <img src="assets/images/Video-Images/KOC-2.png" alt="">
-                        <div class="content">
-                            <div class="title">
-                                Osbaldwick SHOP
-                            </div>
-                            <div class="des">
-                                CLICK HERE
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="assets/images/Video-Images/KOC-3.bmp" alt="">
-                        <div class="content">
-                            <div class="title">
-                                FISHERGATE SHOP
-                            </div>
-                            <div class="des">
-                                CLICK HERE
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img src="assets/images/Video-Images/KOC-4.bmp" alt="">
-                        <div class="content">
-                            <div class="title">
-                                PRIVATE EVENTS
-                            </div>
-                            <div class="des">
-                                CLICK HERE
-                            </div>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <img class="img1" src="assets/images/Video-Images/KOC-1.png" alt="">
-                        <div class="content">
-                            <div class="title">
-                                SELBY
-                                SHOP
-                            </div>
-                            <div class="des">
-                                CLICK HERE
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="arrows">
-                <div class="button" id="prev">
-                    <</div> <div class="button" id="next">>
-                </div>
-            </div>
-
-            <div class="time"></div>
-        </section>
-    </main>
+<main>
+    <section></section>
+</main>
 
     <footer>
         <div class="footer-wrapper container">
